--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,29 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>study-stream</module>
+        <module>study-java-base</module>
     </modules>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+<!--            <scope>test</scope>-->
+        </dependency>
+    </dependencies>
 
 </project>
